# mcp-client

./: README.md  client1.py  main.py  mcp_chat.py  pyproject.toml  requirements.txt  streamlit_app.py
