[project]
name = "mcp-client"
version = "0.1.0"
description = "A multi-server MCP client with CLI and Streamlit chat UI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-experimental",
    "langchain-groq",
    "langchain-mcp-adapters",
    "mcp",
    "python-dotenv",
    "streamlit",
]
